Fixed alignment of content on documentation detail pages.

--- a/css/style.scss
+++ b/css/style.scss
@@ -1114,6 +1114,11 @@ main {
 	}
 }
 
+.tabs__panel {
+	@media all and (min-width: $bp-med) {
+		margin-left: 1em;
+	}
+}
 
 
 
